syntax = "proto3";
package exomonad.effects.messaging;

// Agentâ†”TL messaging effects for inter-agent communication.

// ============================================================================
// SendNote - Fire-and-forget note from agent to TL
// ============================================================================

message SendNoteRequest {
  // Note content (plain text).
  string content = 1;
  // Team name for delivery.
  string team_name = 2;
}

message SendNoteResponse {
  // Acknowledgment that the note was received.
  bool ack = 1;
}

// ============================================================================
// SendQuestion - Blocking question from agent to TL
// ============================================================================

message SendQuestionRequest {
  // Question content (plain text).
  string question = 1;
  // Reserved for the removed context field to preserve wire compatibility.
  reserved 2;
  reserved "context";
  // Team name for delivery.
  string team_name = 3;
}

message SendQuestionResponse {
  // The TL's answer.
  string answer = 1;
}

// ============================================================================
// Service definition
// ============================================================================

service MessagingEffects {
  rpc SendNote(SendNoteRequest) returns (SendNoteResponse);
  rpc SendQuestion(SendQuestionRequest) returns (SendQuestionResponse);
}
